tests/files/parser_tests/should_fail/076.cmdr
//Should not parse ternary expression
x = ? x : y;